// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render expeneses summary with 1 expense 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <h1>
        Viewing 
        1
         
        expense
         totalling 
        $ 50.000,0
    </h1>
</div>,
  "nodes": Array [
    <div>
      <h1>
            Viewing 
            1
             
            expense
             totalling 
            $ 50.000,0
      </h1>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ExpensesSummary
        expensesCount={1}
        expensesTotal={50000}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "expensesCount": 1,
          "expensesTotal": 50000,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <h1>
                    Viewing 
                    1
                     
                    expense
                     totalling 
                    $ 50.000,0
          </h1>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div>
          <h1>
                    Viewing 
                    1
                     
                    expense
                     totalling 
                    $ 50.000,0
          </h1>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpensesSummary
    expensesCount={1}
    expensesTotal={50000}
/>,
}
`;

exports[`render expeneses summary with multiple expenses 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <h1>
        Viewing 
        55
         
        expenses
         totalling 
        $ 8.234.857.328.945,0
    </h1>
</div>,
  "nodes": Array [
    <div>
      <h1>
            Viewing 
            55
             
            expenses
             totalling 
            $ 8.234.857.328.945,0
      </h1>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ExpensesSummary
        expensesCount={55}
        expensesTotal={8234857328945}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "expensesCount": 55,
          "expensesTotal": 8234857328945,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          <h1>
                    Viewing 
                    55
                     
                    expenses
                     totalling 
                    $ 8.234.857.328.945,0
          </h1>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div>
          <h1>
                    Viewing 
                    55
                     
                    expenses
                     totalling 
                    $ 8.234.857.328.945,0
          </h1>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpensesSummary
    expensesCount={55}
    expensesTotal={8234857328945}
/>,
}
`;
